# acGL-Abstaction

./: .gitignore  CMakeLists.txt  README.md  library.h
include/: Buffer.h  Drawable.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexArrayRenderer.h  VertexBuffer.h  VertexBufferLayout.h  VertexBufferRenderer.h  VertexIndexBufferRenderer.h  Window.h  acGL_Abstraction.h  pch.h
res/shaders/: basic2dShader.glsl
src/: Buffer.cpp  Drawable.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexArrayRenderer.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferRenderer.cpp  VertexIndexBufferRenderer.cpp  Window.cpp  acGL_Abstraction.cpp
test/basic_window/: CMakeLists.txt  basic_window.cpp
test/drawable_test/: CMakeLists.txt
